# OpenCV

./: .gitignore  README.md
bbauv/orbital 2014/: navigation_map.py  readme.txt  sonar.py  sonarFilter.py  sonarFilterAsh.py  sonarFilterGui.py  sonarfilter_old.py  sonarthres.py  thresholding.py  vision.py
bbauv/robosub 2014/cfg/: rgb.cfg  sonar.cfg  torpedo.cfg
bbauv/robosub 2014/front_commons/: frontComms.py  frontCommsVision.py  runFront.sh
bbauv/robosub 2014/rgb_buoy/: comms.py  states.py  states_halfworking.py  states_new.py  states_old.py  states_ushouse1.py  states_working_queenstown.py  temp.py  temp_new.py  testHSV.py  vision.py  vision_ushouse1.py
bbauv/robosub 2014/torpedo/: OA  __init__.py  comms.py  sonarAlex.py  sonarExp.py  sonarExp_old.py  sonarExp_orig.py  sonarFilter.py  sonarFilter_old.py  sonarTest.py  sonarthres.py  states.py  states_ushouse1.py  states_ushouse2.py  states_working_usv1.py  stateswosonar.py  static.py  testVision.py  testWarp.py  torpedo_working.py  vision.py  vision_new.py  vision_old.py  vision_robosub_day1.py  vision_smallpool.py  vision_ushouse1.py  vision_ushouse2.py  vision_working.py  vision_working_usv1.py
bbauv/sauvc 2014/: blob.cpp  flare.cfg  flaredetection.cpp  flarestates.cpp
bbauv/scripts/: config.py  lynn_threshold.py  scp_lynnette.sh  sonar_thres_lynnette.sh  utils.py  vision_bag.sh  vision_thres_lynnette.sh
opencvbuilds/: opencvbuilds.md
src/: CMakeLists.txt
src/ch1/: Ex10_writetoavi.cpp  Ex1_loadimage.cpp  Ex6_canny.cpp
src/ch2/: Ex2_playavi.cpp  Ex3_trackbar.cpp  Ex4_smoothing.cpp  Ex5_trans.cpp  Ex9_cameracapture.cpp
src/ch3/: Ex3_12.cpp  Ex3_13.cpp  Ex3_14.cpp
src/ch4/: Ex4_1.cpp  Ex4_2.cpp
src/test/: blob.cpp  blob2.cpp
